feat: adicionar relatório de erros no front
